# wgh-helper

./: README.md  deploy.sh  install.sh  pyproject.toml  requirements.txt
wgh/: __main__.py  bootstrap.py  cli.py  config.py  db.py  peers.py  qr.py  wg.py
