[project]
name = "wireguard-helper"
version = "0.1.0"
description = "Interactive WireGuard server bootstrapper and peer manager"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "qrcode>=7.4",
]

[project.scripts]
wgh = "wgh.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wgh*"]
